# HanaNakamura-VTuber-OSS

./: .env.example  .gitignore  AGENTS.md  ANALISE_COMPLETA_HANA_2026-04-02.md  LICENSE  NOTICE  PLANO_MODELOS.md  README.md  TRADEMARK.md  conftest.py  main.py  pytest.ini  requirements-optional.txt  requirements.txt  run_hana_gui_hidden.vbs  run_hana_runtime.cmd  test_image_b64.py  test_memory.py  test_part.py  test_part_bytes.py  test_part_uri.py  test_upload.py
!Hana_Agent_OSS/: README.md  pyproject.toml
!Hana_Agent_OSS/config/: mcp_servers.example.json
!Hana_Agent_OSS/contracts/: module_manifest.schema.json
!Hana_Agent_OSS/docs/: MEMORY_QUARANTINE.md  MODULE_CONTRACT.md
!Hana_Agent_OSS/hana_agent_oss/: __init__.py  __main__.py  cli.py  paths.py
!Hana_Agent_OSS/hana_agent_oss/api/: __init__.py  server.py
!Hana_Agent_OSS/tests/: test_agent_core_v1.py  test_attachment_extract.py  test_attachment_store.py  test_deepseek_provider.py  test_discord_provider_config.py  test_discord_voice.py  test_fishaudio_streaming.py  test_gemini_attachments.py  test_image_generation.py  test_memory_fabric.py  test_new_pillars.py  test_omni_bridge.py  test_openai_compatible_tools.py  test_openrouter_routing.py  test_openrouter_tool_schemas.py  test_persona_prompts.py  test_provider_adapters.py  test_script_tools.py  test_stt_groq_whisper.py  test_terminal_agent.py  test_unified_history.py  test_vad_silero.py  test_vision_quality.py  test_vision_routing.py  test_voice_runtime.py  test_voice_streaming.py
!Hana_Agent_OSS/tools/: vad_mic_probe.py
assets/: LICENSE.md
(+269 files in other folders)
